<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/addProductLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BF000000">

    <TextView
        android:id="@+id/kategoriTextView"
        android:layout_width="410dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:iconifiedByDefault="false"
        android:queryHint="@string/arama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProduct"
        android:layout_width="409dp"
        android:layout_height="533dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"/>

</androidx.constraintlayout.widget.ConstraintLayout>