<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/MainActivityLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BF000000">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
...
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:contextClickable="false"
        android:text="@string/listelerim"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ListerecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListerecyclerView"
        android:layout_width="405dp"
...
